welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
 if (aSmile==false && bSmile==false || aSmile==true && bSmile==true){
   return true
 } 
}  